KBContent Dashed CompSci group
Adding the CompSci super group .

--- a/knowledge/index.html
+++ b/knowledge/index.html
@@ -60,86 +60,89 @@
 					My ideas
 				</a>
 			</div>
-			<div class="KBSoftEng">
-				<a data-toggle="collapse" data-parent="#accordion" href="#softeng">
-					Software creation and management
-				</a>
-			</div>
-			<div class="KBWrapper">
-				<div class="KBEss">
-					<div class="KBEssCell">
-						<a data-toggle="collapse" data-parent="#accordion" href="#programming">
-							Programming
-						</a>
+			<div class="CompSci">
+				<div class="KBSoftEng">
+					<a data-toggle="collapse" data-parent="#accordion" href="#softeng">
+						Software creation and management
+					</a>
+				</div>
+				<div class="KBWrapper">
+					<div class="KBEss">
+						<div class="KBEssCell">
+							<a data-toggle="collapse" data-parent="#accordion" href="#programming">
+								Programming
+							</a>
+						</div>
+						<div class="KBEssCell">
+							<a data-toggle="collapse" data-parent="#accordion" href="#algorithms">
+								Algorithms and theoretical computer science
+							</a>
+						</div>
+						<div class="KBEssCell">
+							<a data-toggle="collapse" data-parent="#accordion" href="#ai">
+								Artificial intelligence
+							</a>
+						</div>
+						<div class="KBEssCell">
+							<a data-toggle="collapse" data-parent="#accordion" href="#math">
+								Mathematical foundation
+							</a>
+						</div>
 					</div>
-					<div class="KBEssCell">
-						<a data-toggle="collapse" data-parent="#accordion" href="#algorithms">
-							Algorithms and theoretical computer science
-						</a>
+					<div class="KBOtherTop">
+						<div class="KBOtherTopCell">
+							<a data-toggle="collapse" data-parent="#accordion" href="#platforms">
+								Software platforms and libraries
+							</a>
+						</div>
+						<div class="KBOtherTopCell">
+							<a data-toggle="collapse" data-parent="#accordion" href="#information">
+								Information management
+							</a>
+						</div>
+						<div class="KBOtherTopCell">
+							<a data-toggle="collapse" data-parent="#accordion" href="#networks">
+								Communication and networks
+							</a>
+						</div>
+						<div class="KBOtherTopCell">
+							<a data-toggle="collapse" data-parent="#accordion" href="#security">
+								Security and privacy
+							</a>
+						</div>
 					</div>
-					<div class="KBEssCell">
-						<a data-toggle="collapse" data-parent="#accordion" href="#ai">
-							Artificial intelligence
-						</a>
-					</div>
-					<div class="KBEssCell">
-						<a data-toggle="collapse" data-parent="#accordion" href="#math">
-							Mathematical foundation
-						</a>
+					<div class="KBOtherBott">
+						<div class="KBOtherBottCell">
+							<a data-toggle="collapse" data-parent="#accordion" href="#graphic">
+								Computer graphics and visualization
+							</a>
+						</div>
+						<div class="KBOtherBottCell">
+							<a data-toggle="collapse" data-parent="#accordion" href="#hci">
+								Human-computer interaction
+							</a>
+						</div>
+						<div class="KBOtherBottCell">
+							<a data-toggle="collapse" data-parent="#accordion" href="#cm">
+								Computing methodologies
+							</a>
+						</div>
+						<div class="KBOtherBottCell">
+							<a data-toggle="collapse" data-parent="#accordion" href="#hardware">
+								Computer system organization and hardware
+							</a>
+						</div>
 					</div>
 				</div>
-				<div class="KBOtherTop">
-					<div class="KBOtherTopCell">
-						<a data-toggle="collapse" data-parent="#accordion" href="#platforms">
-							Software platforms and libraries
-						</a>
-					</div>
-					<div class="KBOtherTopCell">
-						<a data-toggle="collapse" data-parent="#accordion" href="#information">
-							Information management
-						</a>
-					</div>
-					<div class="KBOtherTopCell">
-						<a data-toggle="collapse" data-parent="#accordion" href="#networks">
-							Communication and networks
-						</a>
-					</div>
-					<div class="KBOtherTopCell">
-						<a data-toggle="collapse" data-parent="#accordion" href="#security">
-							Security and privacy
-						</a>
-					</div>
-				</div>
-				<div class="KBOtherBott">
-					<div class="KBOtherBottCell">
-						<a data-toggle="collapse" data-parent="#accordion" href="#graphic">
-							Computer graphics and visualization
-						</a>
-					</div>
-					<div class="KBOtherBottCell">
-						<a data-toggle="collapse" data-parent="#accordion" href="#hci">
-							Human-computer interaction
-						</a>
-					</div>
-					<div class="KBOtherBottCell">
-						<a data-toggle="collapse" data-parent="#accordion" href="#cm">
-							Computing methodologies
-						</a>
-					</div>
-					<div class="KBOtherBottCell">
-						<a data-toggle="collapse" data-parent="#accordion" href="#hardware">
-							Computer system organization and hardware
-						</a>
-					</div>
-				</div>
-			</div>
+			</div><!-- /CompSci -->
 			<div class="KBBeyond">
 					<a data-toggle="collapse" data-parent="#accordion" href="#beyond">
 						Beyond computer science
 					</a>
 			</div>
 		</div>
-	</div>
+	</div><!-- /MainContent -->
+	
    <footer>
 		<div class="container">
 			<div class="row">
