Sample KB Content Fa
Sample KB content for Fa language added.

--- a/knowledge/fasamplecontent/index.html
+++ b/knowledge/fasamplecontent/index.html
@@ -50,11 +50,11 @@
 			<li><a href="../">Knowledge Base</a></li>
 			<li>Group II</li>
 		</ol>
-		<div class="ContentHeader">
-			<h1>Sample Content</h1>
+		<div class="ContentHeaderFa">
+			<h1>محتوای نمونه</h1>
 		</div>
-		<div class="ContentText">
-			<p>This is a sample content of knowledge base.</p> 
+		<div class="ContentTextFa">
+			<p>این یک محتوای نمونه از پایگاه دانش است.</p> 
 		</div>
 	</div>
 	
