Bugfix: index page content header
Webpage -> Webpages

--- a/fa/index.html
+++ b/fa/index.html
@@ -50,7 +50,7 @@
 			<a href="../" class="LangButton">English</a>
 		</div>
 		<div class="ContentHeaderFa">
-			<h1>صفحه شخصی یک</h1>
+			<h1>صفحات شخصی یک</h1>
 			<h1>توسعه دهنده راهکارهای نرم افزاری هوشمند</h1>
 		</div>
 		<div class="ContentTextFa">
