--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
 			<a href="fa/" class="LangButton">فارسی</a>
 		</div>
 		<div class="ContentHeader">
-			<h1>The Personal Webpage Of An</h1>
+			<h1>The Personal Webpages Of An</h1>
 			<h1>Intelligent Software Solutions Developer</h1>
 		</div>
 		<div class="ContentText">
