--- a/knowledge/index.html
+++ b/knowledge/index.html
@@ -46,6 +46,9 @@
    </header>
    
 	<div class="MainContent">
+		<div class="ContentHeader">
+			<h1>Knowledge Base Categories</h1>
+		</div>
 		<div class="KBContent" id="accordion">
 			<div class="panel">
 				<div id="ideas" class="panel-body panel-collapse collapse">
