Bugfix: KB Header padding
removing extra padding

--- a/knowledge/index.html
+++ b/knowledge/index.html
@@ -46,7 +46,7 @@
    </header>
    
 	<div class="MainContent">
-		<div class="ContentHeader">
+		<div class="ContentHeader" id="KBHeader">
 			<h1>Knowledge Base Categories</h1>
 		</div>
 		<div class="KBContent" id="accordion">
