Contact page email style
gray dot and at

--- a/contact/index.html
+++ b/contact/index.html
@@ -54,7 +54,7 @@
 		</div>
 		<div class="ContentTextCenter">
 			<p>You can contact me at</p>
-			<p>CONTACT at KAYKANLOO dot COM</p> 
+			<p>CONTACT <span class="GrayText">at</span> KAYKANLOO <span class="GrayText">dot</span> COM</p> 
 		</div>
 	</div>
    
