--- a/fa/contact/index.html
+++ b/fa/contact/index.html
@@ -54,7 +54,7 @@
 		</div>
 		<div class="ContentTextCenterFa">
 			<p>می توانید با این آدرس با من تماس بگیرید</p>
-			<p>CONTACT at KAYKANLOO dot COM</p>
+			<p><span class="EmailAddress">CONTACT <span class="GrayText">at</span> KAYKANLOO <span class="GrayText">dot</span> COM</span></p>
 		</div>
 	</div>
 	   
