--- a/resume/index.html
+++ b/resume/index.html
@@ -49,11 +49,36 @@
 		<div class="ContentLangBar">
 			<a href="../fa/resume/" class="LangButton">فارسی</a>
 		</div>
-		<div class="ContentHeader">
-			<h1>My Resume</h1>
+		<div class="ContentHeader container-fluid">
+			<div class="row">
+				<div class="col-sm-12">
+					<h2>Software Developer</h2>
+				</div>
+			</div>
+			<div class="row">
+				<div class="col-sm-12" id="ResumeKeywords">
+					<h3>Intelligent, Mobile, Cloud-Based, Application Softwares</h3>
+				</div>
+			</div>
+			<div class="row">
+				<div class="col-sm-6" id="ResumeName">
+						<h4>Mohammad Kaykanloo</h4>
+				</div>
+				<div class="col-sm-6" id="ResumeAddress">
+						<h4><span class="EmailAddress">CONTACT <span class="GrayText">at</span> KAYKANLOO <span class="GrayText">dot</span> COM</span></h4>
+				</div>
+			</div>
 		</div>
-		<div class="ContentTextCenter">
-			<p>I'll upload my resume as soon as possible!</p>
+		<div class="ContentText">
+			<p><b>Technical Skills:</b></br>
+				<ul>
+					<li><b>Programming Languages:</b> Assembly(X86) - C/C++ - Java - Transact-SQL </li>
+					<li><b>Programming Paradigms:</b> Procedural - Object Oriented - Functional - Agent Oriented - Declarative - Event Driven - Concurrent</li>
+					<li><b>Markup Languages:</b> XML - HTML - CSS - LaTeX</li>
+					<li><b>Operating Systems:</b> Linux - Android - Windows - OpenBSD</li>
+					<li><b>Software Engineering:</b> Agile Methods - Git</li>
+				</ul>
+			</p>
 		</div>
 	</div>
  
