Resume Fa Content
Header and Content in Fa lang

--- a/fa/resume/index.html
+++ b/fa/resume/index.html
@@ -50,11 +50,36 @@
 		<div class="ContentLangBarFa">
 			<a href="../../resume/" class="LangButton">English</a>
 		</div>
-		<div class="ContentHeaderFa">
-			<h1>رزومه من</h1>
+		<div class="ContentHeaderFa container-fluid">
+			<div class="row">
+				<div class="col-sm-12" id="ResumeHeaderTitleFa">
+					<h2>توسعه دهنده نرم افزار</h2>
+				</div>
+			</div>
+			<div class="row">
+				<div class="col-sm-12" id="ResumeKeywordsFa">
+					<h3>نرم افزارهای کاربردی هوشمند، موبایل و مبتنی بر پردازش ابری</h3>
+				</div>
+			</div>
+			<div class="row">
+				<div class="col-sm-6" id="ResumeAddressFa">
+						<h4><span class="EmailAddress">CONTACT <span class="GrayText">at</span> KAYKANLOO <span class="GrayText">dot</span> COM</span></h4>
+				</div>
+				<div class="col-sm-6" id="ResumeNameFa">
+						<h4>محمد کیکانلو</h4>
+				</div>
+			</div>
 		</div>
-		<div class="ContentTextCenterFa">
-			<p>در اولین فرصت رزومه خود را بارگذاری خواهم کرد!</p>
+		<div class="ContentTextFa" id="ResumeContentFa">
+			<p><span class="ResumeTextFa">مهارت های فنی:</span></br>
+				<ul>
+					<li><span class="ResumeTextFa">زبان های برنامه نویسی:</span> Assembly(X86) - C/C++ - Java - Transact-SQL </li>
+					<li><span class="ResumeTextFa">پارادایم های برنامه نویسی:</span> Procedural - Object Oriented - Functional - Agent Oriented - Declarative - Event Driven - Concurrent</li>
+					<li><span class="ResumeTextFa">زبان های نشانه گذاری:</span> XML - HTML - CSS - LaTeX</li>
+					<li><span class="ResumeTextFa">سیستم های عامل:</span> Linux - Android - Windows - OpenBSD</li>
+					<li><span class="ResumeTextFa">مهندسی نرم افزار:</span> Agile Methods - Git</li>
+				</ul>
+			</p>
 		</div>
 	</div>
  
