Replacing samplecontent with structuredcontent
sample content deleted. structured content renamed to samplecontent.

--- a/knowledge/samplecontent/index.html
+++ b/knowledge/samplecontent/index.html
@@ -57,35 +57,52 @@
 		<div class="ContentText" id="MarkDownDes">
 		</div>
 <code id="MarkDownSrc">
-Setext-Style H1 header
-====
-Setext-Style H2 header
-----
-# Atx-Style H1 header
-## Atx-Style H2 header
-### Atx-Style H3 header
-#### Atx-Style H4 header
-##### Atx-Style H5 header
-###### Atx-Style H6 header
+# Section 1
+This is a simple
+paragraph of text. Written for 
+testing purposes.
 
-A simple text ends with two spaces.  
+We should except 
+a new paragraph here.
 
-1. There is also numbered lists
-1. With auto numbering
+__Unordered lists__:
 
-And unordered lists:    
+* Item 1 
+* Item 2 
+	* Item 2.1 
+		* Item 2.1.1 
+	* Item 2.2
 
-* Unordered list, item 1
-+ Unordered list, item 2
-* Unordered list written in
-multiple lines
-* Unordered list can consists of
-	multiple lines.
-	
-	Or even paragraphs! 
-* Via one tab.   
+__Ordered List__:
 
-__code__, `inline` or as a block:
+1. Item
+1. Item
+	1. Item
+	1. Item
+1. Item
+
+__Links__:
+
+Inline links [like this](http://www.example.com "optional title") can be written.
+There is also two types of reference-like links, like [this][id] and [this][].
+
+[id]: http://www.example.com "optional title"
+[this]: http://www.example.com "optional title"  
+
+# Section 2 
+This section has multiple subsections:
+
+## Subsection 2.1 
+Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean convallis id ante quis vestibulum. Vestibulum vestibulum semper sagittis. Nullam nulla lacus, tempor ut consectetur nec, facilisis ut tellus. Quisque scelerisque urna et sem sodales, ut placerat erat fringilla. Vivamus sed massa quis mauris ullamcorper aliquet accumsan id urna. Fusce dignissim, neque vel tempus semper, enim urna dictum tortor, dignissim lobortis nulla justo ac mi. Donec sit amet felis fringilla, posuere lacus ac, auctor lacus. Nam laoreet dolor nec magna ornare, sit amet lacinia enim euismod. Phasellus cursus ligula tellus, faucibus tempus urna blandit id. Mauris pellentesque porta feugiat. Ut eu risus id dolor accumsan eleifend eget id nulla. Vivamus aliquet nulla elit, et varius mauris tincidunt in.
+
+## Subsection 2.2 
+Curabitur et consequat neque. Nullam vitae mauris feugiat metus fringilla consequat at ut magna. Ut luctus eget eros eu suscipit. Sed aliquam lectus at ex cursus placerat. Proin vestibulum magna id magna dignissim, ac cursus augue sagittis. Fusce a pharetra orci, volutpat rhoncus dolor. Quisque eu arcu eget mauris dignissim rhoncus ac id enim. Sed pellentesque, felis a elementum gravida, neque nibh blandit ante, nec posuere turpis enim nec sapien. Duis a nisl posuere tortor auctor convallis quis vitae nisi. Sed in mauris in dolor tristique imperdiet sed sagittis libero. Maecenas finibus nisi magna, vitae blandit erat eleifend lobortis. Integer gravida sodales elit. Suspendisse non lectus varius, finibus est pulvinar, volutpat diam. Cras a nibh bibendum, mattis est id, tincidunt justo. Nulla lacinia sem scelerisque justo suscipit elementum. Morbi nibh eros, scelerisque eu efficitur a, rhoncus ut massa.
+
+### Subsection 2.2.1 
+Vestibulum mattis, ipsum pharetra pellentesque vehicula, lacus nisl luctus nibh, vitae luctus neque felis id enim. Pellentesque ut luctus ex. Morbi sit amet risus in nulla convallis tristique quis id magna. Sed accumsan turpis non turpis hendrerit, quis eleifend ligula aliquam. Curabitur in est mattis, porta dui sed, tincidunt leo. Aenean ut convallis tortor, eget tempus ante. Curabitur eros sapien, luctus eget sodales eu, ullamcorper sit amet turpis.
+
+# Section 3
+An article also needs __code__, `inline` or as a block:
 
 	#include <iostream>
 	using namespace std;
@@ -95,14 +112,6 @@ __code__, `inline` or as a block:
 		cout << "Hello World!" << endl;
 		return 0;
 	}
-
-Inline links [like this](http://www.example.com "optional title") can be written.
-There is also reference-like [links][id]. In addition to [this][]  
-
-[id]: http://www.example.com "optional title"
-[this]: http://www.example.com "optional title"  
-
-_Italic_ and __Bold__ texts.
 
 __Math Formula__ support, inline \\(ax^2 + bx + c = 0\\) or as block:
 
@@ -114,6 +123,9 @@ __Math Formula__ support, inline \\(ax^2 + bx + c = 0\\) or as block:
 	\end{vmatrix}  \]
 </div>
 
+And __pictures__:
+
+<img src="../../img/Avatar.png"/>
 </code>
 	</div>
 	
