--- a/knowledge/samplecontent/index.html
+++ b/knowledge/samplecontent/index.html
@@ -16,6 +16,7 @@
 	<script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
 	<script src="https://oss.maxcdn.com/libs/respond.js/1.4.2/respond.min.js"></script>
 	<![endif]-->
+	<link rel="stylesheet" href="../../css/vs.css">
 	<link href="../../css/styles.css?v=1.2" rel="stylesheet">
 	<script type="text/javascript" src="../../js/pagedown.js"></script>	
 </head>
@@ -169,6 +170,8 @@ And __pictures__:
 	</script>
 	<script src="../../js/jquery.min.js"></script>
 	<script src="../../js/bootstrap.min.js"></script>
+	<script src="../../js/highlight.pack.js"></script>
+	<script>hljs.initHighlightingOnLoad();</script>
 	<script type="text/javascript" src="http://cdn.mathjax.org/mathjax/latest/MathJax.js?config=TeX-AMS-MML_HTMLorMML"></script>
 	<script src="../../js/googleanalytics.js"></script>
 </body>
