Sample Content: Table Of Content
Auto generating TOC feature added.

--- a/knowledge/samplecontent/index.html
+++ b/knowledge/samplecontent/index.html
@@ -102,6 +102,9 @@ Curabitur et consequat neque. Nullam vitae mauris feugiat metus fringilla conseq
 ### Subsection 2.2.1 
 Vestibulum mattis, ipsum pharetra pellentesque vehicula, lacus nisl luctus nibh, vitae luctus neque felis id enim. Pellentesque ut luctus ex. Morbi sit amet risus in nulla convallis tristique quis id magna. Sed accumsan turpis non turpis hendrerit, quis eleifend ligula aliquam. Curabitur in est mattis, porta dui sed, tincidunt leo. Aenean ut convallis tortor, eget tempus ante. Curabitur eros sapien, luctus eget sodales eu, ullamcorper sit amet turpis.
 
+#### Subsection 2.2.1.1
+Quisque commodo risus ut aliquet hendrerit. Aenean dignissim mauris eget tortor fringilla dictum. Phasellus leo dolor, vehicula eu leo sed, accumsan interdum erat. Aenean egestas vehicula lacus eu vulputate. Nulla ut consectetur nisl. Nullam quis sodales metus. Nunc dictum aliquet erat, et pharetra ligula pretium a. Etiam vitae neque dapibus, aliquet erat accumsan, bibendum dolor. Nunc pellentesque orci et augue volutpat, at consequat nunc rutrum.
+
 # Section 3
 An article also needs __code__, `inline` or as a block:
 
@@ -170,6 +173,7 @@ And __pictures__:
 	</script>
 	<script src="../../js/jquery.min.js"></script>
 	<script src="../../js/bootstrap.min.js"></script>
+	<script src="../../js/toc.js"></script>
 	<script src="../../js/highlight.pack.js"></script>
 	<script>hljs.initHighlightingOnLoad();</script>
 	<script type="text/javascript" src="http://cdn.mathjax.org/mathjax/latest/MathJax.js?config=TeX-AMS-MML_HTMLorMML"></script>
